# pdf_parser

./: .dockerignore  .env.example  AGENTS.md  Dockerfile  README.md  docker-compose.override.yml  docker-compose.yml  gunicorn.conf.py  main.py  pyproject.toml
.github/workflows/: ci-deploy.yml  deploy.yml
app/: main.py
app/api/: auth.py  middleware.py  routes.py
app/core/: config.py  logging.py
app/services/: parser.py
deploy/systemd/: pdf_parser.service
tests/: test_auth.py  test_logging.py
