[project]
name = "pdf_parser"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asgi-correlation-id>=4.3.1",
    "docling>=2.16.0",
    "fastapi>=0.115.7",
    "gunicorn>=21.2.0",
    "httpx>=0.27.0",
    "pydantic-settings>=2.2.1",
    "python-json-logger>=2.0.7",
    "python-multipart>=0.0.9",
    "uvicorn>=0.34.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
]
